@@ -20,6 +20,9 @@
       Thanks to Joel Cunningham for the report!
   * Fixed: API documentation front page no longer empty with Doxygen 1.8.13
   * Fixed: "make -C doc install" fixed for lack of .map files
+  * Improved: Communicate that absolutePath is always URI_FALSE for URIs
+      with a host in uriparse CLI tool output and Uri.h header
+      (GitHub #2, SF.net #30)
   * Soname: 1:21:0
 
 2015-10-12 -- 0.8.4
